--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -11,13 +11,11 @@
 .d-img {
     height: 20px;
     width: 20px;
-    background-color: #fff;
-    margin-right: 5px;
+    margin-right: 15px;
 }
 .down-arrow {
-    height: 20px;
-    width: 20px;
-    background-color: #fff;
+    height: 13px;
+    width: 13px;
     margin-left: auto;
 }
 
@@ -44,9 +42,9 @@
     align-items: center;
 }
 
-/* .dash-opts-top {
-    display: fl;
-} */
+.dash-opts-top {
+    padding-top: 20px;
+}
 
 
 
