--- a/src/components/StudentDashboard.css
+++ b/src/components/StudentDashboard.css
@@ -16,7 +16,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: wheat;
+    background-color: #ffffff;
 }
 
 .main-content p, span, h1 {
@@ -28,32 +28,30 @@
     /* height: 80%; */
     margin-top: 97px;
     width: 90%;
-    border: 1px solid black;
-    display: grid;
+    display: flex;
+    flex-direction: column;
+    margin-left: -30px;
     /* grid-template-rows: 60% 40%; */
 }
 
 .top-content {
     display: grid;
     grid-template-columns: 70% 30%;
+    column-gap: 43px;
 }
 
 
-.top-content .top-right {
-    border: 1px solid red;
-}
 
 /* Top left content */
 .top-content .top-left {
-    border: 1px solid blue
 }
 
 
 
 .prof-content {
     width: 100%;
-    border: 1px solid black;
     margin-bottom: 52px;
+    padding-top: 17px;
     background-color: #EFF8FF;
     border-radius: 9.26708px;
     /* width: 746px; */
@@ -63,7 +61,6 @@
 .prof-cont-wrapper {
     width: 94%;
     margin: 0 auto;
-    border: 1px solid peru;
 }
 
 .prof-cont-wrapper p {
@@ -88,7 +85,6 @@
 .prof-nav button {
     width: 153px;
     height: 33px;
-    border: 1px solid #FF0000;
     color: #FF0000;
     font-family: 'Roboto';
     font-style: normal;
@@ -161,7 +157,6 @@
     justify-content: center;
     align-items: center;
     margin-top: 20px;
-    border: 1px solid green;
     height: 47px;
     background: #F8FCFF;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
@@ -203,9 +198,11 @@
     padding: 2px 10px;
 }
 
-/* .eval-wrapper .eval .down-ar {
-    margin-right: 17px;
-} */
+.eval-wrapper .eval .down-ar {
+    /* margin-right: 17px; */
+    height: 13px;
+    width: 13px;
+}
 
 .top-left-wrapper .eligible {
     width: 223px;
@@ -214,10 +211,194 @@
     border-radius: 10px;
     border: none;
     margin-top: 34px;
+    margin-bottom: 19px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 19px;
     color: #FFFFFF;
+}
+
+/* Top right content */
+.top-right-wrapper {
+    height: 100%;
+    width: 100%;
+}
+
+.top-right-wrapper .above {
+    height: 192px;
+    background: #EFF8FF;
+    border-radius: 9.26708px;
+    margin-bottom: 7px;
+}
+
+.top-right-wrapper .above p {
+    height: 19px;
+    text-align: center;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 19px;
+    margin-bottom: 14px;
+    padding-top: 23px;
+}
+
+.top-right-wrapper .above div {
+    width: 235px;
+    height: 36px;
+    margin: 0 auto;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 18px;
+}
+
+.top-right-wrapper .above button {
+    width: 286px;
+    height: 40px;
+    background: #21B573;
+    border-radius: 10px;
+    text-align: center;
+    margin-top: 24px;
+    margin-left: 15px;
+    border: none;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    color: #FFFFFF;
+}
+
+.top-right-wrapper .below {
+    height: 354px;
+    background: #EFF8FF;
+    border-radius: 10px;
+}
+
+.top-right-wrapper .below .gather{
+    width: 148px;
+    height: 150px;
+    margin: 23px auto 17px;
+}
+
+.top-right-wrapper .below p {
+    width: 280px;
+    height: 72px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    margin: 0 auto;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+}
+
+.top-right-wrapper .below button {
+    width: 290px;
+    height: 50px;
+    background: #0D2C58;
+    border-radius: 10px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    margin: 10px 12px 0;
+    line-height: 24px;
+    color: #FFFFFF;
+}
+
+/* Bottom content */
+.bottom-content {
+    width: 1096px;
+    background: #EFF8FF;
+    border-radius: 10px;
+    margin-bottom: 62px;
+}
+
+.bottom-content .document {
+    /* width: 1135px; */
+    height: 55px;
+    display: flex;
+    align-items: center;
+    /* background: #EFF8FF; */
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+}
+
+.bottom-content .document span {
+    height: 24px;
+    font-family: 'Roboto';
+    margin-left: 24px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+    color: #000000;
+}
+
+.bottom-content .below-doc {
+    height: 341px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.below-doc-right {
+    display: flex;
+    align-items: center;
+}
+
+.below-doc-right .single-person {
+    width: 458px;
+    height: 272px;
+}
+
+.below-doc-left p {
+    height: 24px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    margin: 0;
+    padding: 0;
+    margin-left: 26px;
+}
+
+.below-doc-left p:first-child {
+    margin-top: 29px;
+    margin-bottom: 13px;
+}
+
+.below-doc-left p:nth-child(2) {
+    margin-bottom: 41px;
+}
+
+.below-doc-left button {
+    margin-left: 26px;
+    width: 223px;
+    height: 50px;
+    background: #0D2C58;
+    border-radius: 10px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    border: none;
+    margin-bottom: 44px;
+    color: #FFFFFF;
+}
+
+.below-doc-left .please {
+    height: 19px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #FF0000;
 }
