added university Dashboard

--- a/src/components/StudentDashboard.css
+++ b/src/components/StudentDashboard.css
@@ -91,6 +91,7 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 16px;
+    border: 1px solid #FF0000;
     background-color: #EFF8FF;
 }
 
