--- a/src/pages/uniPage/Specialization.css
+++ b/src/pages/uniPage/Specialization.css
@@ -14,6 +14,12 @@
     margin-left: 250px;
 }
 
+.spec-opts-cover {
+    height: 1580px;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
 .specialization-wrap .uni-opts-wrap {
     display: flex;
     flex-direction: column;
