--- a/src/pages/uniPage/UniPage.css
+++ b/src/pages/uniPage/UniPage.css
@@ -62,8 +62,13 @@
     margin-right: auto;
 }
 
-.unipage-main .search-box p {
+.unipage-main .search-box input {
     margin-left: 30px;
+    color: #000000;
+    border: none;
+    font-size: large;
+    outline: none;
+    background-color: #EFF8FF;
 }
 
 .unipage .vert-line {
@@ -96,6 +101,32 @@
 
 .unipage .main-content {
     display: flex;
+}
+
+.funnel-drop {
+    position: absolute;
+    top: 190px;
+    right: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 197px;
+    height: 236px;
+    background: #B6D8F2;
+    border-radius: 10px;
+    padding: 15px 25px 27px;
+    z-index: 1;
+}
+
+.funnel-drop span {
+    border-bottom:1px solid #FFFFFF;
+    margin-top: 16px;
+    padding-bottom: 5px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
 }
 
 .filter-opt {
@@ -235,7 +266,7 @@
 .unipage .uni-select {
     width: 100%;
     margin-left: 15px;
-    height: 1580px;
+    /* height: 1580px;
     overflow-y: auto;
-    overflow-x: hidden;
+    overflow-x: hidden; */
 }
