--- a/src/pages/uniPage/UniSelect.css
+++ b/src/pages/uniPage/UniSelect.css
@@ -14,8 +14,77 @@
     margin-left: 100px;
 }
 
+.pls-complete {
+    position: absolute;
+    display: flex;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.25);
+    /* Note: backdrop-filter has minimal browser support */
+    backdrop-filter: blur(11px);
+    border-radius: 10px;
+}
+
+.pls-complete div {
+    margin-top: 150px;
+    width: 479px;
+    height: 205px;
+    background: #FFFFFF;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.pls-complete div h2 {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+}
+
+.pls-complete div p {
+    font-family: 'Roboto';
+    padding: 0;
+    margin: 0;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+}
+
+.pls-complete div button {
+    width: 287px;
+    height: 50px;
+    left: 893px;
+    top: 637px;
+    background: #5D8BF4;
+    border-radius: 10px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 24px;
+    color: #FFFFFF;
+    border: none;
+    margin-top: 17px;
+}
+
+.uni-opts-cover {
+    height: 1580px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    /* position: relative; */
+    z-index: 0;
+}
+
 .uni-opts-wrap {
     display: flex;
+    position: relative;
     flex-direction: column;
     align-items: center;
     justify-content: center;
