--- a/src/components/studentComp/Dashboard.css
+++ b/src/components/studentComp/Dashboard.css
@@ -1,5 +1,6 @@
 
 .student-dash .dash-std-main-content {
+    position: relative;
     padding-top: 55px;
     width: 87%;
     margin-left: 13%;
@@ -15,9 +16,75 @@
     padding: 0;
 }
 
+.prog-track {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    padding-left: 3px;
+    padding-right: 20px;
+    top: 100px;
+    left: 54px;
+    width: 850px;
+    height: 74px;
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 15px;
+    background-color: #EFF8FF;
+} 
+
+.prog-track .step {
+    display: flex;
+    align-items: center;
+    column-gap: 5px;
+}
+
+.prog-track .step div {
+    /* padding: 2px; */
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 17px;
+    width: 17px;
+    background-color: #ffffff;
+    background-color: red;
+}
+
+.shape {
+    position: absolute;
+    top: 105px;
+    right: 347px;
+}
+
+.shape div {
+    height: 30px;
+    width: 120px;
+    background-color: #FFFFFF;
+    position: relative;
+    /* border: 1px solid black; */
+}
+
+.shape div:nth-of-type(1) {
+    top: -10px;
+    /* border-top: 20px solid black; */
+    transform: rotate(30deg);
+}
+.shape div:nth-of-type(2) {
+    transform: rotate(-30deg);
+    bottom: -10px;
+    border-bottom-left-radius: 70%;
+}
+
+.sep {
+    width: 35px;
+    height: 100%;
+    position: relative;
+    left: -5px;
+}
+
 .dash-std-main-content .content-wrapper {
     /* height: 80%; */
-    margin-top: 97px;
+    margin-top: 140px;
     width: 90%;
     display: flex;
     flex-direction: column;
@@ -256,6 +323,7 @@
     text-align: center;
     margin-top: 24px;
     margin-left: 15px;
+    margin: 24px 10% 0;
     border: none;
     font-family: 'Roboto';
     font-style: normal;
@@ -298,14 +366,14 @@
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
-    margin: 10px 12px 0;
+    margin: 10px 10% 0;
     line-height: 24px;
     color: #FFFFFF;
 }
 
 /* Bottom content */
 .bottom-content {
-    width: 1096px;
+    width: 1230px;
     background: #EFF8FF;
     border-radius: 10px;
     margin-bottom: 62px;
