--- a/src/components/uniPage/UniSelect.css
+++ b/src/components/uniPage/UniSelect.css
@@ -14,7 +14,7 @@
     margin-left: 100px;
 }
 
-.pls-complete {
+.uni-select-wrap .pls-complete {
     position: absolute;
     display: flex;
     top: 0;
@@ -28,7 +28,7 @@
     border-radius: 10px;
 }
 
-.pls-complete div {
+.uni-select-wrap .pls-complete div {
     margin-top: 150px;
     width: 479px;
     height: 205px;
@@ -37,7 +37,7 @@
     text-align: center;
 }
 
-.pls-complete div h2 {
+.uni-select-wrap .pls-complete div h2 {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 600;
@@ -46,7 +46,7 @@
     text-align: center;
 }
 
-.pls-complete div p {
+.uni-select-wrap .pls-complete div p {
     font-family: 'Roboto';
     padding: 0;
     margin: 0;
@@ -57,7 +57,7 @@
     text-align: center;
 }
 
-.pls-complete div button {
+.uni-select-wrap .pls-complete div button {
     width: 287px;
     height: 50px;
     left: 893px;
@@ -75,7 +75,7 @@
 }
 
 .uni-opts-cover {
-    height: 1680px;
+    height: 950px;
     overflow-y: auto;
     overflow-x: hidden;
     /* position: relative; */
